# AngstromCube

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  notes.md
data/: .gitignore  README.md
doc/: .gitignore  README.md  a43manual.tex  a43theory.tex  aa3theory.tex  arbitrary_unit_cells.md  atom_solving_mode.tex  big_picture.pptx  errors.md  literature.bib  modules_grouped.txt  multi_grid.tex  sho-as-a-basis.tex  size_of_executable.txt
doc/cho/: .gitignore  README.md  bitmap.hxx  cho_plot.agr  cho_plot_4panels.agr  cho_plot_all.agr  cho_radial.hxx  cho_unitary.cxx  cho_unitary.hxx  circular_harmonic_functions.txt  circular_harmonic_oscillator_radial_energy_levels.agr  convert_bitmaps_to_pngs.sh
doc/fig/: .gitignore  20190529_fcc_dispersion.agr  20190529_fcc_overlap.agr  20190529_fcc_overlap_lowest_eig.agr  20200127_spherical_atoms_ionized0.agr  20200127_spherical_atoms_ionized9.agr  20200131_zero_potential.agr  20240912_logarithmic_derivative_Cu.agr  Cu320Zr180_distance_hist.agr  Cu_logder_with_true_rad_grid.agr  Fermi-Dirac-distribution.agr  GaussianProductRule.agr  HO-basis-on-2-atoms.F90  HO-basis-on-2-atoms.agr  N_eigenvalues_of_charge-deficit_operator.agr  aa3_logo.fig  aa3_logo_bold.fig  aa3_logo_bold_no_helper_lines.fig  aa3_logo_bold_no_helper_lines_no_frame.fig  atom_core.LDA.agr  atom_core.total_energy_fitted.agr  charge_deficit_Cu_d.agr  charge_deficit_Cu_p.agr  charge_deficit_Cu_s.agr  charge_deficit_method_recreate_second.agr  convergence_of_FD_towards_FFT_solution.agr  convergence_of_He_spectrum.agr  finding_electrostatic_multipole_shifts.agr  fourier_poisson.agr  free_electron_bcc.agr  free_electron_fcc.agr  free_electron_sc.agr  geometry_analysis-scaling.agr  geometry_analysis.scaling.agr  green_dyadic.nu.orthogonality_normalization.agr  green_dyadic.orthogonality_normalization.agr  larger_compensation_radii.agr  memory_consumption.agr  memory_consumption_overhead.agr  multi_grid_1D_convergence.agr  (+21 more)
docs/: .gitignore
docs/fig/: .gitignore  20200127_spherical_atoms_ionized0.agr  Makefile  RamerDouglasPeucker_reduction.agr  atom_core_LDA_dots.agr  geometry_analysis-scaling.agr  hermite_gauss_functions.agr  multi_grid_1D_convergence.agr  optimized_sigma.agr  overlap_free_electron_bcc.agr  overlap_free_electron_sc.agr  radial_spectral_density.gnuplot  slow_CG_convergence.agr
green/: .gitignore  CMakeLists.txt  HAS_NO_CUDA.sh  Makefile  README.md  control.cxx  display_units.cxx  green.cu  green.cxx  green_experiments.cxx  green_function.cu  green_function.cxx  green_input.cxx  green_kinetic.cu  green_parallel.cxx  green_tests.cu  green_tests.cxx  load_balancer.cxx  mpi_parallel.cxx  recorded_warnings.cxx
include/: .gitignore  README.md  action_plan.hxx  add_module_test.h  angular_grid.h  angular_grid.hxx  atom_communication.hxx  atom_core.hxx  atom_image.hxx  bessel_transform.hxx  bisection_tools.hxx  bitmap.hxx  boundary_condition.hxx  brillouin_zone.hxx  chemical_symbol.h  chemical_symbol.hxx  complex_tools.hxx  conjugate_gradients.hxx  constants.hxx  control.hxx  data_list.hxx  data_view.hxx  davidson_solver.hxx  debug_output.hxx  debug_tools.hxx  define_version.h  define_version.hxx  dense_operator.hxx  dense_solver.hxx  density_generator.hxx  display_units.h  dyadic_plan.hxx  element_config.hxx  energy_contour.hxx  energy_contribution.hxx  energy_level.hxx  exchange_correlation.hxx  export_upf.hxx  fermi_distribution.hxx  finite_difference.hxx  (+88 more)
interfaces/: control.sh
interfaces/C/: Makefile  test_live_atom.c
interfaces/F90/: Makefile  test_live_atom.F90
interfaces/Julia/: control.sh  test_live_atom.jl
julia/: example.xml  green_input.jl  read_xml.jl
ref/: .gitignore  README.md  angular_grid.out  atom_core.txt  geometry_analysis.out_AlP_dimer.xyz  geometry_analysis.out_Al_single.xyz  geometry_analysis.out_Al_spherical_atom.xyz  geometry_analysis.out_Au_fcc.xyz  geometry_analysis.out_Au_hcp.xyz  geometry_analysis.out_Cu320Zr180.xyz  geometry_analysis.out_Cu40Zr22.xyz  geometry_analysis.out_Cu_fcc.xyz  geometry_analysis.out_Cu_fcc_inversion.xyz  geometry_analysis.out_Cu_fcc_shifted.xyz  geometry_analysis.out_Fe_bcc.xyz  geometry_analysis.out_Po_sc.xyz  geometry_analysis.out_Sc2O3.xyz  geometry_analysis.out_dna.xyz  geometry_analysis.out_fcc.xyz  geometry_analysis.out_graphene.xyz  geometry_analysis.out_hcp.xyz  geometry_analysis.out_new_GST_set2.xyz  geometry_analysis.out_silicene.xyz  geometry_analysis.out_tpa_on_gold.xyz
src/: .git_key.h.in  .gitignore  CMakeLists.txt  Makefile  Makefile.green  README.md  a43_main.cxx  action_plan.cxx  angular_grid.cxx  angular_grid.h  angular_grid.hxx  atom_communication.cxx  atom_core.cpp  atom_core.cxx  atom_core.hxx  atom_image.hxx  bessel_transform.cxx  bessel_transform.hxx  bisection_tools.hxx  boundary_condition.cxx  boundary_condition.hxx  brillouin_zone.hxx  chemical_symbol.cxx  chemical_symbol.h  chemical_symbol.hxx  complex_tools.hxx  conjugate_gradients.cxx  conjugate_gradients.hxx  constants.hxx  control.cxx  control.hxx  core_configuration.cxx  core_configuration.hxx  create_release_version.sh  data_list.hxx  data_view.hxx  data_view.md  davidson_solver.cxx  davidson_solver.hxx  debug_output.hxx  (+159 more)
src/tools/: rapidxml
test/: .gitignore  C.LDA  Hmt_vacuum_8x8x8.xml  README.md  a43  atom_core.test.sh  charge_deficit.test.sh  control.test.sh  element_config.test.sh  free_electron.sh  geometry_analysis.test.sh  gpaw_loading.test.sh  green  green_dyadic.test.sh  green_experiments.test.sh  green_function.test.sh  green_kinetic.benchmark.sh  load_balancer.test.sh  load_json_file.py  memory_consumption.test.sh  multi_grid.test.sh  optimize_sigma.test.sh  parallel_poisson.test.sh  pawxml_import.test.sh  plane_wave.test.sh  plane_waves.test.sh  potential_generator.test.sh  pseudo_basis.all.sh  pw_hamiltonian.test.sh  self_consistency.test.sh  sho_hamiltonian.test.sh  sho_potential.test.sh  sigma_config.test.sh  single_atom.pawxml_import.test.sh  single_atom.scf.test.sh  single_atom.test.semicore.sh  single_atom.test.sh  spectrum.sh  standalone_module_test.sh  standalone_module_tests.sh  (+4 more)
(+29 files in other folders)
